Fixed google chrome overflow visible.

--- a/src/components/SpaceCard/SpaceCard.module.scss
+++ b/src/components/SpaceCard/SpaceCard.module.scss
@@ -145,7 +145,7 @@ $img_padding_inner: 20px;
   transform-origin: right;
   /*Speed of the Door animation*/
   transition: all 0.3s ease-in-out;
-  overflow: visible;
+  // overflow: visible;
   position: absolute;
   top: 15px;
   left: 15px;
